--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pytest = "^8.2.0"
 factory-boy = "^3.3.0"
 django = "^5.0.6"
 django-rest-framework = "^0.1.0"
+django-extensions = "^3.2.3"
 
 
 [build-system]
